--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.23.0",
     "react-tabs": "^6.0.2",
+    "react-to-pdf": "^1.0.1",
     "react-tooltip": "^5.26.4",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.8"
