--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.8",
     "check-valid-url": "^0.1.0",
     "firebase": "^10.11.1",
+    "framer-motion": "^11.1.9",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.4",
